# __BEGIN_LICENSE__
# Copyright (C) 2006-2009 United States Government as represented by
# the Administrator of the National Aeronautics and Space Administration.
# All Rights Reserved.
# __END_LICENSE__


##############################################
# sources
##############################################

SUBDIRS = asp

##############################################
# general
##############################################

include $(top_srcdir)/config/rules.mak