
#########################################################################
# sources
#########################################################################

include_HEADERS = ExtoriExtrinsics.h HRSC.h	\
		  StereoSessionHRSC.h

#########################################################################
# general
#########################################################################

AM_CPPFLAGS = @ASP_CPPFLAGS@
AM_LDFLAGS = @ASP_LDFLAGS@ -version-info @LIBTOOL_VERSION@

includedir = $(prefix)/include/asp/Sessions/HRSC

include $(top_srcdir)/config/rules.mak